testing: white line issue, no change, keeping changes as they provide a cleaner structure, trying vertical-align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -422,6 +422,9 @@ ul {
     text-indent: 5px;
 }
 
+.img-bot {
+    vertical-align: bottom;
+}
 
 #full-name {
     width: 100%;
